package task2;
import task2.Line.Position;

public interface Linable {

    public void setPosition(Position position);

    public Position getPosition();

    public int rank(int random);

    public int getValue();

}
